--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.application.name=library
-spring.data.mongodb.uri=mongodb+srv://root:<db_password>@book-keeper.7nxu9zx.mongodb.net/?retryWrites=true&w=majority&appName=Book-keeper
+spring.data.mongodb.uri=mongodb+srv://root:${MONGO_PASSWORD}@book-keeper.7nxu9zx.mongodb.net/?retryWrites=true&w=majority&appName=Book-keeper
 spring.data.mongodb.database=book-keeper
