--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,7 @@ spring.application.name=library
 spring.data.mongodb.uri=mongodb+srv://root:${MONGO_PASSWORD}@book-keeper.7nxu9zx.mongodb.net/?retryWrites=true&w=majority&appName=Book-keeper
 spring.data.mongodb.database=library
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.type=trace
