--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,14 @@
 			<artifactId>gson</artifactId>
 			<version>2.6.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-inline</artifactId>
+			<version>5.2.0</version> <!-- or latest -->
+			<scope>test</scope>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
